web-infras/parser/tests/fixtures/esprima/es2017/trailing-commas/invalid-empty-method/output.txt
[SyntaxError]: Unexpect trailing comma. (1,13)
1|class A { f(,){} }
 |           ^
